--- a/.github/workflows/apt.yml
+++ b/.github/workflows/apt.yml
@@ -24,5 +24,5 @@ jobs:
         env
         echo $?
         cat /etc/os-release
-        cp ./install-nplinker-deps /usr/loca/bin
+        cp ./install-nplinker-deps /usr/local/bin
         sudo install-nplinker-deps
