--- a/.github/workflows/apt.yml
+++ b/.github/workflows/apt.yml
@@ -25,4 +25,4 @@ jobs:
     - name: install 
       run: |
         echo "execute install script"
-        sudo install-nplinker-deps
+        install-nplinker-deps
